Added title, buttons

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<link href="style.css" rel="stylesheet">
 <head>
+    <link href="style.css" rel="stylesheet">
 
 </head>
 <body>
+    <header>
+        <h1>Etch-a-Sketch</h1>
+    </header>
     <main>
-        <div id="container">
-            
+        <div id="controls">
+            <button>Clear</button><button>Black</button><button>Color</button><button>Random</button>
+        </div>
+        <div id="display">
+            <div id="container">
+                
+            </div>
         </div>
     </main>
     <script src="script.js"></script>
