--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </header>
     <main>
         <div id="controls">
-            <button>Clear</button><button>Black</button><button>Color</button><button>Random</button>
+            <button id="clear">Clear</button><button id="noColor">Black</button><button id="pickColor">Color</button><button id="randomColor">Random</button>
         </div>
         <div id="display">
             <div id="container">
