--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
         </div>
     </main>
-    <script src="script.js"></script>
+    <script src="scriptOutline.js"></script>
 
 
 </body>
